--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -48,12 +48,12 @@
   justify-content: space-between;
   display: flex;
   align-items: center;
-  background-color: #f2f2f2;
+  background-color: #6C2DC7;
   color: 111111;
   border-radius: 15px;
   padding: 10px;
   width: 60%;
-  color: black;
+  color: white;
 }
 
 .join img{
@@ -64,13 +64,13 @@
   margin-top: 10vh;
   height: 6px;
   width: 100%;
-  background: linear-gradient(#2B0A3D,  #FFFFFF); /* or your exact hex values */
+  background: linear-gradient(#0B0B0B,  #FFFFFF); /* or your exact hex values */
 }
 
 .section_divider2{
   width: 100%;
   height: 6px;
-  background: linear-gradient(#FFFFFF, #2B0A3D);
+  background: linear-gradient(#FFFFFF, #0B0B0B);
 }
 
 .main_mission{
@@ -125,10 +125,6 @@
   height: 2vh;
   border-radius: 20px;
   padding: 10px;
-}
-
-.join button:active{
-  background-color: #c9c9c9;
 }
 
 
